--- a/chatVid/app/templates/lobby.html
+++ b/chatVid/app/templates/lobby.html
@@ -5,7 +5,7 @@
     <main>
         <section id="form-container">
 
-            <img id="logo" src="images/chat-icon.png"/>
+            <img id="logo" src="{%static 'images/chat-icon.png'%}"/>
 
             <div id="welcome-message">
                 <h1>Welcome to MyChat</h1>
