Token added for users

--- a/chatVid/app/templates/room.html
+++ b/chatVid/app/templates/room.html
@@ -3,7 +3,7 @@
 {% block content %}
     <main>
         <section id="room-name-wrapper">
-            <p>Room Name: TESTROOM</p>
+            <p>Room Name: <span id="room-name"></span></p>
         </section>
 
                 <div id="video-streams">
