--- a/chatVid/app/templates/lobby.html
+++ b/chatVid/app/templates/lobby.html
@@ -15,13 +15,13 @@
             <form id="form">
                 <div class="form-field">
                     <label>Room</label>
-                    <input type="text" name="room" placeholder="Enter room name..."/>
+                    <input type="text" name="room" placeholder="Enter room name..." style='text-transform:uppercase;'/>
                 </div>
 
-                <div class="form-field">
+                {% comment %} <div class="form-field">
                     <label>Name</label>
                     <input type="text" name="room" placeholder="Enter username..."/>
-                </div>
+                </div> {% endcomment %}
 
                 <div class="form-field">
                     <input type="submit"  value="Join Room">
@@ -36,6 +36,19 @@ let form=document.getElementById('form')
 let handleSubmit=async(e)=>
 {
 e.preventDefault()
+let room=e.target.room.value.toUpperCase()
+console.log(room)
+console.log('here')
+let response=await fetch (`/get_token/?channel=${room}`)
+let data=await response.json()
+
+let UID=data.uid
+let token=data.token
+
+sessionStorage.setItem('UID',UID)
+sessionStorage.setItem('token',token)
+sessionStorage.setItem('room',room)
+
 window.open('../room/','_self')
 }
 
