--- a/chatVid/app/templates/lobby.html
+++ b/chatVid/app/templates/lobby.html
@@ -8,7 +8,7 @@
             <img id="logo" src="{%static 'images/chat-icon.png'%}"/>
 
             <div id="welcome-message">
-                <h1>Welcome to MyChat</h1>
+                <h1>Welcome to ChatVid</h1>
                 <p>A group video calling platform made just for you!</p>
             </div>
 
